syntax = "proto3";

package ctrpcpt;
import "common.proto";
// The loing service definition.
service CTRPC {
 //KeepAlive rpc 
  rpc KeepAlive(KeepAliveRequest)returns (KeepAliveReply){}
 //Login 
  rpc Login (LoginRequest) returns (LoginReply){}
  //Logout
  rpc Logout (LogoutRequest) returns (LogoutReply){}
  //chat 
  rpc Chat (ChatRequest) returns (ChatReply){}

  //PushStream
  rpc PushStream(PushMessageRequest) returns (stream PushMessageReply){}
}


//KeepAlive
message KeepAliveRequest{
    int64 time =1;
}
message KeepAliveReply{
    int32 result =1;
}
//login
message LoginRequest{
  int64 uid =1;
  int32 serverId = 2;
  string uname =3;
  int32 figure = 4;
  int32 level = 5;
  int32 vip = 6;
}
message LoginReply{
  int32 result = 1;
}
//logout 
message LogoutRequest{
  int64 uid = 1;
}
message LogoutReply{
  int32 result = 1;
}
//chat
message ChatRequest{
  pbcommon.ChatMessage chatMsg = 1;
}
message ChatReply{
  int32 result = 1;
}

//push rpc 
message PushMessageRequest{
  int32 serverId = 1;
}
message PushMessageReply{
  int32 type = 1;
  int32 time = 2;
  int32 uid  = 3;
  pbcommon.ChatMessage chatMsg = 4;
}
